# taskies

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  taskies.toml
docs/: Attribution.md  Useful.md
res/migrations/: 20221129152332_create_employers_table.sql  20230104084922_create_persistent_objects_table.sql
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  resource.h  resource.rc
src/common/: common.cpp  common.h  version.h
src/core/: configuration.cpp  configuration.h  database_migration.cpp  database_migration.h  environment.cpp  environment.h
src/ui/: mainframe.cpp  mainframe.h  persistencemanager.cpp  persistencemanager.h  translator.cpp  translator.h
src/utils/: utils.cpp  utils.h
